working further on the base

--- a/app/views/homepage.templ
+++ b/app/views/homepage.templ
@@ -1,7 +1,7 @@
 package views
 
 import (
-	"hielkefellinger.nl/dramatic_gopher/app/views/components"
+	"github.com/HielkeFellinger/dramatic_gopher/app/views/components"
 )
 
 templ Homepage() {
@@ -10,7 +10,14 @@ templ Homepage() {
         @components.Header()
         <body class="bg-gray-800">
             <main class="min-h-screen w-full">
-
+                <div class="mt-6 w-full flex justify-center items-center flex-col">
+                    <section class="mt-6 px-4 py-4 w-96 bg-gray-700 rounded-lg">
+                        <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
+                            Start a new game!
+                        </h4>
+                        <button onclick="window.location = '/game/new';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> CREATE NEW GAME </button>
+                    </section>
+                </div>
             </main>
         </body>
         @components.Footer("Welcome")
