--- a/app/views/loadGamePage.templ
+++ b/app/views/loadGamePage.templ
@@ -4,7 +4,7 @@ import (
 	"github.com/HielkeFellinger/dramatic_gopher/app/views/components"
 )
 
-templ Homepage() {
+templ LoadGamePage() {
     <!DOCTYPE html>
     <html lang="en">
         @components.Header()
@@ -13,10 +13,12 @@ templ Homepage() {
                 <div class="mt-6 w-full flex justify-center items-center flex-col">
                     <section class="mt-6 px-4 py-4 w-96 bg-gray-700 rounded-lg">
                         <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
-                            Start a new game!
+                            Choose a Game!
                         </h4>
+
+
+
                         <button onclick="window.location = '/game/new';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> CREATE NEW GAME </button>
-                        <button onclick="window.location = '/game/load';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> LOAD A GAME </button>
                     </section>
                 </div>
             </main>
