--- a/app/views/loadGamePage.templ
+++ b/app/views/loadGamePage.templ
@@ -2,23 +2,23 @@ package views
 
 import (
 	"github.com/HielkeFellinger/dramatic_gopher/app/views/components"
+	"github.com/HielkeFellinger/dramatic_gopher/app/engine"
 )
 
-templ LoadGamePage() {
+templ LoadGamePage(games []engine.Game) {
     <!DOCTYPE html>
     <html lang="en">
         @components.Header()
         <body class="bg-gray-800">
             <main class="min-h-screen w-full">
                 <div class="mt-6 w-full flex justify-center items-center flex-col">
-                    <section class="mt-6 px-4 py-4 w-96 bg-gray-700 rounded-lg">
-                        <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
-                            Choose a Game!
-                        </h4>
-
-
-
-                        <button onclick="window.location = '/game/new';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> CREATE NEW GAME </button>
+                    <section class="mt-6 px-4 py-4 w-2xl bg-gray-700 rounded-lg">
+                        <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">Choose a Game!</h4>
+                        <div class="flex flex-wrap justify-center items-center w-full">
+                            for _, game := range games {
+                                @components.BuildGameCard(game)
+                            }
+                        </div>
                     </section>
                 </div>
             </main>
