--- a/app/views/joinGamePage.templ
+++ b/app/views/joinGamePage.templ
@@ -3,9 +3,10 @@ package views
 import (
 	"github.com/HielkeFellinger/dramatic_gopher/app/views/components"
     "github.com/HielkeFellinger/dramatic_gopher/app/engine"
+    "github.com/HielkeFellinger/dramatic_gopher/app/models"
 )
 
-templ JoinGamePage(game engine.Game) {
+templ JoinGamePage(game engine.Game, user models.User, notifications []models.Notification) {
     <!DOCTYPE html>
     <html lang="en">
         @components.Header()
@@ -13,12 +14,19 @@ templ JoinGamePage(game engine.Game) {
             <main class="min-h-screen w-full">
                 <div class="mt-6 w-full flex justify-center items-center flex-col">
                     <section class="mt-6 px-4 py-4 w-96 bg-gray-700 rounded-lg">
-                        <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">Joining Game: '{game.GetTitle()}'</h4>
+                        <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center mb-2">Joining Game: '{game.GetTitle()}'</h4>
                         <form method="post" action={ "/game/join/" + game.GetId() } >
-                            <label for="password" class="text-gray-700 ml-1">Join Password: </label>
-                            <input type="password" id="password" name="password" class="w-full border rounded-lg p-2 mt-2 mb-2" placeholder="Password" />
+                            <label for="displayName" class="text-gray-200 ml-1">Your Display Name: </label>
+                            <input type="text" id="displayName" name="displayName" class="w-full border rounded-lg p-2 mt-2 mb-2"
+                                placeholder="Your Display Name" value={user.Name} required />
+                            <label for="password" class="text-gray-200 ml-1">Join Password: </label>
+                            <input type="password" id="password" name="password" class="w-full border rounded-lg p-2 mt-2 mb-4"
+                                placeholder="Password" required/>
                             <button class="mt-2 w-full px-2 h-10 rounded-lg text-white bg-blue-500"> JOIN </button>
                         </form>
+                        if len(notifications) > 0 {
+                            @components.Notifications(notifications)
+                        }
                     </section>
                 </div>
             </main>
