--- a/app/views/session.templ
+++ b/app/views/session.templ
@@ -11,13 +11,13 @@ templ Session(user models.User, game engine.Game) {
     <html lang="en">
         @components.Header()
         <body class="bg-gray-800">
-            <main class="min-h-screen w-full">
-                <div class="container mx-auto flex flex-col justify-center items-center min-h-screen">
-                    <div class="min-w-96">
+            <main class="min-h-screen min-h-screen min-w-screen">
+                <div class="container flex flex-row justify-center items-center min-h-screen min-w-screen">
+                    <div class="min-w-128 min-h-screen border-r border-gray-700 border-1 items-center justify-between">
                     </div>
-                    <div class="">
+                    <div class="flex min-h-screen justify-center items-center flex-grow">
                     </div>
-                    <div class="min-w-96">
+                    <div class="min-w-128 min-h-screen border-l border-gray-700 border-1 items-center justify-between">
                     </div>
                 </div>
             </main>
