--- a/app/views/components/header.templ
+++ b/app/views/components/header.templ
@@ -5,6 +5,7 @@ templ Header() {
 	    <script src="https://unpkg.com/htmx.org@2.0.0" integrity="sha384-wS5l5IKJBvK6sPTKa2WZ1js3d947pvWXbPJ1OmWfEuxLgeHcEbjUUA5i9V5ZkpCw" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/htmx-ext-ws@2.0.0/ws.js"></script>
 	    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <script src="https://unpkg.com/lucide@latest"></script>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Dramatic Gopher</title>
