Refactoring Auth structure basics

--- a/app/views/homepage.templ
+++ b/app/views/homepage.templ
@@ -1,10 +1,11 @@
 package views
 
 import (
-	"github.com/HielkeFellinger/dramatic_gopher/app/views/components"
+    "github.com/HielkeFellinger/dramatic_gopher/app/models"
+    "github.com/HielkeFellinger/dramatic_gopher/app/views/components"
 )
 
-templ Homepage() {
+templ Homepage(user models.User) {
     <!DOCTYPE html>
     <html lang="en">
         @components.Header()
@@ -12,11 +13,18 @@ templ Homepage() {
             <main class="min-h-screen w-full">
                 <div class="mt-6 w-full flex justify-center items-center flex-col">
                     <section class="mt-6 px-4 py-4 w-96 bg-gray-700 rounded-lg">
+                        if (user.Id != "") {
                         <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
                             Start a new game!
                         </h4>
                         <button onclick="window.location = '/game/new';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> CREATE NEW GAME </button>
                         <button onclick="window.location = '/game/load';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> LOAD A GAME </button>
+                        } else {
+                        <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
+                            Get Started!
+                        </h4>
+                        <button onclick="window.location = '/user/login';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> LOGIN </button>
+                        }
                     </section>
                 </div>
             </main>
