Small styling checks

--- a/app/views/homepage.templ
+++ b/app/views/homepage.templ
@@ -17,13 +17,26 @@ templ Homepage(user models.User) {
                         <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
                             Start a new game!
                         </h4>
-                        <button onclick="window.location = '/game/new';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> CREATE NEW GAME </button>
-                        <button onclick="window.location = '/game/load';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> LOAD A GAME </button>
+                        <button onclick="window.location = '/game/new';"
+                                class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500 cursor-pointer
+                                    hover:bg-blue-800 focus:ring-2 focus:ring-blue-300">
+                            <b>CREATE NEW GAME</b>
+                        </button>
+                        <button onclick="window.location = '/game/load';"
+                                class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500 cursor-pointer
+                                    hover:bg-blue-800 focus:ring-2 focus:ring-blue-300">
+                            <b>LOAD A GAME</b>
+                        </button>
+                        <br>
                         } else {
                         <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
                             Get Started!
                         </h4>
-                        <button onclick="window.location = '/user/login';" class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500"> LOGIN </button>
+                        <button onclick="window.location = '/user/login';"
+                                class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500 cursor-pointer
+                                    hover:bg-blue-800 focus:ring-2 focus:ring-blue-300">
+                            <b>LOGIN</b>
+                        </button>
                         }
                     </section>
                 </div>
