--- a/app/views/components/gameCard.templ
+++ b/app/views/components/gameCard.templ
@@ -6,18 +6,21 @@ templ BuildGameCard(game engine.Game) {
     <div class="m-1 border border-zinc-200 border-2 min-w-96 max-w-96 shadow-md grid grid-flow-col grid-rows-1 gap-2 bg-gray-800 rounded-lg text-white">
         <div class="col-span-2 m-2">
         </div>
-        <div class="col-span-5 m-2">
-            <h4>{ game.GetTitle() }</h4>
+        <div class="col-span-5 m-2 p-0.5">
+            <h4><i>{ game.GetTitle() }</i></h4>
             <hr>
             { game.GetDescription() }
-            <br>
-            <a href={ "/game/join/" + game.GetId() }>
-                if game.IsRunning() {
-                    Join
-                } else {
-                    Play
-                }
-            </a>
+            <div class="mt-1.75 mb-1">
+                <a class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-2 focus:ring-blue-300 font-medium rounded-lg
+                    text-sm px-3 py-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800"
+                   href={ "/game/join/" + game.GetId()}>
+                    if game.IsRunning() {
+                        <b>JOIN</b>
+                    } else {
+                        <b>PLAY</b>
+                    }
+                </a>
+            </div>
         </div>
     </div>
 }
