--- a/app/views/joinGamePage.templ
+++ b/app/views/joinGamePage.templ
@@ -24,7 +24,9 @@ templ JoinGamePage(game engine.Game, user models.User, notifications []models.No
                                 placeholder="Password" required/>
                             <div class="flex flex-row items-center justify-between">
                                 <div class="w-full">
-                                    <button class="mt-2 w-full px-2 h-10 rounded-lg text-white bg-blue-500 cursor-pointer" onclick="loadSpinner()"> JOIN </button>
+                                    <button class="mt-2 w-full px-2 h-10 rounded-lg text-white bg-blue-500 cursor-pointer
+                                    hover:bg-blue-800 focus:ring-2 focus:ring-blue-300"
+                                            onclick="loadSpinner()"><b>JOIN</b></button>
                                 </div>
                                 @components.SpinnerConstruct("spinner")
                             </div>
