--- a/app/views/loginPage.templ
+++ b/app/views/loginPage.templ
@@ -23,7 +23,9 @@ templ LoginPage(user models.User, notifications []models.Notification) {
                                 placeholder="Password" required/>
                             <div class="flex flex-row items-center justify-between">
                                 <div class="w-full">
-                                    <button class="mt-2 w-full px-2 h-10 rounded-lg text-white bg-blue-500 cursor-pointer" onclick="loadSpinner()"> LOGIN </button>
+                                    <button class="mt-2 w-full px-2 h-10 rounded-lg text-white bg-blue-500 cursor-pointer
+                                            hover:bg-blue-800 focus:ring-2 focus:ring-blue-300"
+                                            onclick="loadSpinner()"><b>LOGIN</b></button>
                                 </div>
                                 @components.SpinnerConstruct("spinner")
                             </div>
