--- a/app/views/homepage.templ
+++ b/app/views/homepage.templ
@@ -33,6 +33,12 @@ templ Homepage(user models.User) {
                             <b>LOAD A GAME</b>
                             }
                         </button>
+                        <br><br>
+                        <button onclick="window.location = '/user/logout';"
+                                class="mt-2 py-1 px-4 w-full h-10 rounded-lg text-white bg-blue-500 cursor-pointer
+                                    hover:bg-blue-800 focus:ring-2 focus:ring-blue-300">
+                            <b>LOGOUT</b>
+                        </button>
                         <br>
                         } else {
                         <h4 class="text-base lg:text-lg text-gray-200 font-medium text-center">
